fixed infographic issue on mobile

--- a/public/css/module/main-content.less
+++ b/public/css/module/main-content.less
@@ -80,10 +80,9 @@ main {
       .border-radius(3px);
       margin-left: 5px;
       color: darken(@pane-bg-color, 10%);
-      border: 1px solid darken(@pane-bg-color, 10%);
       line-height: @height - 2px;
       height: @height;
-      top: 2px;
+      top: 3px;
 
       &:before {
         .icon-mixin;
