--- a/public/css/overrides/media-queries.less
+++ b/public/css/overrides/media-queries.less
@@ -42,6 +42,13 @@
 @media screen and (max-width: 1000px) {
   @split: 38%;
 
+  .info-graphic {
+    width: 100% !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    max-width: none !important;
+  }
+
   html.no-js {
     div header {
       .pane-links {
