--- a/public/css/setup/misc.less
+++ b/public/css/setup/misc.less
@@ -146,7 +146,7 @@ a {
   background-color: lighten(@color, 10%);
   .gradient(@color, darken(@color, 5%), lighten(@color, 5%));
   color: @normal-color;
-  border: 1px solid darken(@color, 5%);
+  border: 1px solid darken(@color, 2%);
 
   .version {
     color: white;
